Refactor y mejoras generales
